k8s/roles/server/templates/depl.yml
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - port: 3000
  selector:
    app: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - image: shengmin98/cve-scanner:test06
          name: server
          ports:
            - containerPort: 3000
              name: server
          volumeMounts:
            - name: ssh-keys
              mountPath: /root/.ssh
            - name: docker-volume
              mountPath: /var/run/docker.sock
      volumes:
        - name: ssh-keys
          secret:
            secretName: ssh-keys
            defaultMode: 256
        - name: docker-volume
          hostPath:
            path: /var/run/docker.sock
