k8s/roles/server/templates/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
spec:
  rules:
    - host: cvescanner.local
      http:
        paths:
          - path: /
            backend:
              serviceName: server
              servicePort: 3000
          - path: /image/.*
            backend:
              serviceName: server
              servicePort: 3000
